# py_curses_editor

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.py
editor/: editor.py
tests/: test_py_curses_editor.py
