[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "py-curses-editor"
dynamic = ["version"]
description = "A configurable curses text editor window"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Scott Hansen", email = "tech@firecat53.net" },
]
keywords = [
    "console",
    "curses",
    "editor",
    "utility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Text Editors",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/firecat53/py_curses_editor"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "editor/_version.py"

[tool.hatch.build.targets.wheel.shared-data]
"CHANGELOG.md" = "share/doc/py_curses_editor/CHANGELOG.md"
"LICENSE.txt" = "share/doc/py_curses_editor/LICENSE.txt"
"README.md" = "share/doc/py_curses_editor/README.md"

[tool.hatch.build.targets.sdist]
include = [
    "/editor",
]
